# mcpt

./: CHANGELOG.md  CONTRIBUTING.md  HANDBOOK.md  MCPT_TEST_COVERAGE_REQUIREMENTS.md  README.md  llms.txt  mcp.yaml  pyproject.toml
.github/workflows/: ci.yml
mcpt/: __init__.py  cli.py
mcpt/registry/: __init__.py  client.py
mcpt/runner/: __init__.py  stub.py
mcpt/workspace/: __init__.py  config.py
npm/: README.md  package.json
tests/: __init__.py  test_cli_commands.py  test_runner.py  test_smoke.py
